Checkstyle google - implemented